--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,23 @@ body {
     overflow: hidden;
 }
 
+#baseMap, #particleCanvas {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+}
+
+#baseMap {
+    z-index: 10;
+}
+
+#particleCanvas {
+    pointer-events: none; /* Make sure it doesn't block interactions with the base map */
+}
+
 .controls-container {
     position: absolute;
     bottom: 20px;
@@ -27,10 +44,11 @@ body {
     flex-direction: column;
     align-items: flex-start;
     gap: 8px;
-    background: rgba(255, 255, 255, 0.7); 
+    background: rgba(255, 255, 255, 0.5); 
     border-radius: 12px; 
     padding: 20px; 
-    border: 1px solid #ccc;
+    border: 1px solid #fff;
+    z-index: 20;
 }
 
 .title {
